Fix user modal overflow

--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,6 @@ body,
   /*  90%to100%-red */
 }
 .dropdown-menu.show {
-  transform: translate3d(-16px, 40px, 0px) !important;
+  transform: translate3d(-24px, 40px, 0px) !important;
 }
 
